<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FrenchLaunch</string>
    <string name="parameter">Paramètres</string>
    <string name="messages">Avancé</string>
    <string name="add_contact">Ajouter un contact</string>
	<!-- <string name="title_s3">Votre communauté</string>
	<string name="title_s2">Vous</string>
	<string name="title_s31">Enfant</string>
	<string name="title_s32">Voisin</string>
	<string name="title_s33">Ami</string>
	<string name="title_s34">Aide à domicile</string>
	<string name="title_s35">Soignants proches</string>
	
	<string name="title_s4">Mes alertes</string>
	<string name="title_s41">Chute</string>
	<string name="title_s42">Inactivité</string>
	<string name="title_s43">Batterie</string>
	<string name="title_s44">Zone de confort</string>
	<string name="title_s5">Avancé</string>
	<string name="title_s54">Messages</string> -->
    <string name="message_text">S2B\" \"S2A\" a envoyé un SOS de nature \"Nx\" à l\'heure \"TIME\". Il est localisé à l\'endroit \"GEOLOC</string>
    <string name="home">ACCUEIL SIDONIE</string>
    <string name="tel_q1">QUE VOULEZ-VOUS FAIRE ?</string>
    <string name="tel_q2">Voulez-vous ajouter un nouveau contact ?</string>
    <string name="tel_q1_option1">1. APPELER FAVORI 1</string>
    <string name="tel_q1_option2">2. APPELER FAVORI 2</string>
    <string name="tel_q1_option3">3. SAISIR UN NUMERO</string>
    <string name="tel_q2_option1">1. OUI</string>
    <string name="tel_q2_option2">2. NON</string>
    <string name="back_home">RETOUR À L’ÉTAPE PRÉCÉDENTE</string>
    <string name="sms_q1_option1">1. LIRE MES MESSAGES</string>
    <string name="sms_q1_option2">2. ÉCRIRE UN MESSAGE</string>
    <string name="sms_q1">QUE VOULEZ-VOUS FAIRE ?</string>
    <string name="repertoire_q1">QUE VOULEZ-VOUS FAIRE ?</string>
    <string name="repertoire_q1_option1">1. VOIR MES CONTACTS</string>
    <string name="repertoire_q1_option2">2. MODIFIER UN CONTACT</string>
    <string name="repertoire_q1_option3">3. AJOUTER UN CONTACT</string>
    <string name="email_q1">QUE VOULEZ-VOUS FAIRE ?</string>
    <string name="email_q1_option1">1. LIRE MES E-MAILS</string>
    <string name="email_q1_option2">2. ÉCRIRE UN E-MAIL</string>
    <string name="sms_q2">A qui voulez-vous écrire un SMS?</string>
    <string name="sms_q3">Veuillez saisir le numéro</string>
    <string name="sms_q2_option1">1. A un contact de mes favoris</string>
    <string name="sms_q2_option2">2. A un contact de ma communauté</string>
    <string name="sms_q2_option3">3. A un de mes contacts</string>
    <string name="sms_q2_option4">4. A un numéro spécifique</string>
    <string name="email_q2">A qui voulez-vous écrire un E-MAIL ?</string>
    <string name="email_q2_option4">4. A une adresse spécifique</string>
    <string name="repertoire_q2">A quel contact voulez-vous accéder ?</string>
    <string name="repertoire_q2_option1">1. Mes Favoris</string>
    <string name="repertoire_q2_option2">2. Ma Communauté</string>
    <string name="repertoire_q2_option3">3. Tout mes contacts</string>
    <string name="repertoire_q3">A QUEL CONTACT VOULEZ-VOUS modifier ?</string>
    <string name="utilitaires_q1_option1">1. Notes</string>
    <string name="utilitaires_q1_option2">2. Calculatrice</string>
    <string name="utilitaires_q1_option3">3. Agenda</string>
    <string name="utilitaires_q1_option4">4. Réveil</string>
    <string name="utilitaires_q1_option5">5. MÉTÉO</string>
    <string name="utilitaires_q1_option6">6. TORCHE</string>
    <string name="utilitaires_q1_option7">7. LOUPE</string>
    <string name="utilitaires_q1_option8">8. STATISTIQUES D\'APPELS</string>
    <string name="internet_q2">Veuillez saisir l’adresse du site Internet </string>
    <string name="internet_q3">Veuillez saisir votre recherche </string>
    <string name="internet_q1_option1">1. Accéder à un site Internet</string>
    <string name="internet_q1_option2">2. Accéder à un site favori</string>
    <string name="internet_q1_option3">3. Faire une recherche sur Google</string>
    <string name="applications_q1_option1">1. Accéder à mes applications</string>
    <string name="applications_q1_option2">2. Télécharger une nouvelle application</string>
    <string name="mes_alertes_q1">Quelle alerte voulez vous paramétrer ?</string>
    <string name="mes_alertes_q2_chute">CONFIGURATION DE L’ALERTE CHUTE</string>
    <string name="mes_alertes_q2_invactivite">CONFIGURATION DE L’ALERTE Inactivité</string>
    <string name="mes_alertes_q2_batterie">CONFIGURATION DE L’ALERTE Batterie</string>
    <string name="mes_alertes_q2_securite">CONFIGURATION DE L’ALERTE Périmètre de sécurité</string>
    <string name="mes_alertes_q1_option1">1. Chute</string>
    <string name="mes_alertes_q1_option2">2. Inactivité</string>
    <string name="mes_alertes_q1_option3">3. Batterie</string>
    <string name="mes_alertes_q1_option4">4. Périmètre de sécurité</string>
    <string name="mes_alertes_q1_option5">5. Minuteur</string>
    <string name="reglages_q1_option1">1. Paramètres généraux</string>
    <string name="reglages_q1_option2">2. Mon profil</string>
    <string name="reglages_q1_option3">3. Votre communauté</string>
    <string name="reglages_q1_option4">4. Paramètres avancés</string>
    <string name="reglages_q2_general">Configuration de généraux</string>
    <string name="reglages_q2_general_option1">1. Voulez activer les alertes par maintien long?</string>
    <string name="reglages_q2_general_option2">2. Wifi</string>
    <string name="reglages_q2_general_option3">3. Bluetooth</string>
    <string name="reglages_q2_general_option4">4. Audio</string>
    <string name="reglages_q2_general_option5">5. Paramètres téléphone</string>
    <string name="reglages_q2_avance">Configuration de avancé</string>
    <string name="reglages_q2_profil">Configuration de Mon Profil</string>
    <string name="reglages_q2_profil_option1">1. Inforations personnelles</string>
    <string name="reglages_q2_profil_option2">2. Votre adresse</string>
    <string name="reglages_q2_profil_option3">3. Votre accés</string>
    <string name="reglages_q2_communaute">Configuration de Votre Communauté</string>
    <string name="reglages_q2_communaute_option1">1. Enfant</string>
    <string name="reglages_q2_communaute_option2">2. Voisin</string>
    <string name="reglages_q2_communaute_option3">3. Ami</string>
    <string name="reglages_q2_communaute_option4">4. Aide à domicile</string>
    <string name="reglages_q2_communaute_option5">5. Soignants proches</string>
    <string name="reglages_q2_communaute_option6">6. favoris1</string>
    <string name="reglages_q2_communaute_option7">7. favoris2</string>
    <string name="reglages_q3_voulez">Configuration de voulez alertes</string>
    <string name="reglages_q3_message">Configuration de message</string>
    <string name="reglages_q3_information">Configuration de Information personnelles</string>
    <string name="reglages_q3_address">Configuration de Votre adresse</string>
    <string name="reglages_q3_access">Configuration de Votre accès</string>
    <string name="reglages_q3_favoris">Configuration de Favoris</string>
    <string name="reglages_q4_addcontact">Add Communauté contact</string>
    <string name="reglages_q3_contactlist">Configuration de </string>
    <string name="prompt_cancel_duration">Durée de désarmement de l’alerte</string>
    <string name="prompt_batterie_minimum">% de Batterie avant alerte</string>
    <string name="prompt_distance_autorisee">Distance autorisée</string>
</resources>
