<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >
    
    <!-- ><LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/setting_block"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            layout="@layout/launch_setting" />

       <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/sos_layout"/> 
    </LinearLayout>-->

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/alertes_bg1"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="4dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/txtQuestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:singleLine="false"
            android:text="@string/mes_alertes_q2_chute"
            android:textAllCaps="true"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="normal" />

       	<!-- <ImageView
            android:id="@+id/imgVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:scaleType="fitEnd"
            android:src="@drawable/volume" />-->

    </RelativeLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/topLayout"
	    android:background="@drawable/alertes_bg2" >

       	<ScrollView
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_above="@+id/bottomLayout"
		    android:fillViewport="true" 
		    android:scrollbars="vertical"
		    >
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	    	android:paddingTop="2dp" >
	    	
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">

				<TextView
				    android:id="@+id/textView1"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="15dp"
				    android:text="ACTIVATION"
				    android:textColor="#ffafacaa"
				    android:textSize="18sp" />

				<LinearLayout
				    
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:background="@drawable/configbox_bg"
				    android:paddingLeft="30dp"
				    android:paddingRight="10dp"
				    android:orientation="horizontal" >

					<TextView
					    android:id="@+id/textView2"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center_vertical"
					    android:layout_weight="1"
					    android:text="Alerte Activée"
					    android:textColor="#ffd0cfce"
					    android:textSize="18sp" />
					<com.launch.ui.view.SwitchButton
			            android:id="@+id/toggleChute"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_vertical" />
				</LinearLayout>
				
			</LinearLayout>
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="vertical">

				<TextView
				    android:id="@+id/textView3"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="15dp"
				    android:text="SENSIBILITÉ DE LA DETECTION"
				    android:textColor="#ffafacaa"
				    android:textSize="18sp" />

				<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:background="@drawable/configbox_bg"
				    
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="10dp"
				    android:paddingBottom="10dp"
				    android:orientation="horizontal" >
					<RadioGroup
				        android:id="@+id/radioSensibilityRate"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:orientation="horizontal" >
				
				        <RadioButton
				            android:id="@+id/radioLow"
				            android:layout_height="wrap_content"
				            android:layout_weight="1"
				            android:background="@drawable/custom_radiobutton_left"
				            android:button="@android:color/transparent"
				            android:checked="true"
				            android:gravity="center"
				            android:text="BASSE"
				            android:paddingTop="10dp"
				            android:paddingBottom="10dp"
				            android:textColor="@drawable/config_radiobutton_textcolor"
				            android:textSize="20sp" />
				
				        <RadioButton
				            android:id="@+id/radioMedium"
				            android:layout_height="wrap_content"
				            android:layout_weight="1"
				            android:background="@drawable/custom_radiobutton_normal"
				            android:button="@android:color/transparent"
				            android:gravity="center"
				            android:paddingTop="10dp"
				            android:paddingBottom="10dp"
				            android:text="MOYENE"
				            android:textColor="@drawable/config_radiobutton_textcolor"
				            android:textSize="20sp" />
				
				        <RadioButton
				            android:id="@+id/radioHigh"
				            android:layout_height="wrap_content"
				            android:layout_weight="1"
				            android:background="@drawable/custom_radiobutton_right"
				            android:button="@android:color/transparent"
				            android:gravity="center"
				            android:paddingTop="10dp"
				            android:paddingBottom="10dp"
				            android:text="HAUTE"
				            android:textColor="@drawable/config_radiobutton_textcolor"
				            android:textSize="20sp" />
				
				    </RadioGroup>
				</LinearLayout>
				
			</LinearLayout>
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:orientation="vertical">

				<TextView
				    android:id="@+id/textView4"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="15dp"
				    android:text="ANNULATION"
				    android:textColor="#ffafacaa"
				    android:textSize="18sp" />

				<LinearLayout
				    
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:background="@drawable/configbox_bg"
				    
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="10dp"
				    android:paddingBottom="10dp"
				    android:orientation="horizontal" >

					<TextView
					    android:id="@+id/textView5"
					    android:layout_width="0dp"
					    android:layout_weight="2"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center_vertical"
					    android:singleLine="false"
					    android:text="Durée de désarmement de l’alerte"
					    android:textColor="#ffd0cfce"
					    android:textSize="18sp" />

					<Spinner
					    android:id="@+id/spinnerCancelCountdown"
					    style="@android:style/Widget.Spinner.DropDown"
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="1"
					    android:layout_gravity="center_vertical"
					    android:spinnerMode="dialog"
					    android:prompt="@string/prompt_cancel_duration" />
					<TextView
	                    
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:gravity="center"
	                    android:paddingLeft="2dip"
	                    android:paddingRight="5dip"
	                    android:singleLine="true"
	                    android:text="s"
	                    android:textColor="#ffd0cfce"
	                    android:textSize="18sp" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
   	    android:id="@id/bottomLayout"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentBottom="true"
   	    android:orientation="vertical"
   	    android:paddingBottom="5dp"
   	    android:paddingLeft="15dp"
   	    android:paddingRight="15dp" >

		<Button
		    android:id="@+id/btnBack"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:layout_marginTop="10dp"
		    android:background="@drawable/back_btn"
		    android:gravity="center_vertical|center_horizontal"
		    android:paddingBottom="15dp"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingTop="15dp"
		    android:text="@string/back_home"
		    android:textColor="#ffffffff"
		    android:textSize="18sp" />

	</LinearLayout>
   	</RelativeLayout>
</RelativeLayout>
